--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "deno.enable": true
+    "deno.enable": true,
+    "grammarly.selectors": [
+        {
+            "language": "mdx",
+            "scheme": "file"
+        }
+    ]
 }
